[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Soma/NewsOverlay.png" type="Texture" id=1]
[ext_resource path="res://addons/dialogic/Editor/Events/styles/InputFieldsStyle.tres" type="Theme" id=2]
[ext_resource path="res://assets/Soma/TelevisionNewsOverlay.gd" type="Script" id=3]
[ext_resource path="res://addons/dialogic/Dialog.tscn" type="PackedScene" id=4]

[node name="TelevisionNewsOverlay" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 977.276, 886.917 )
scale = Vector2( 1.04458, 1.04458 )
texture = ExtResource( 1 )

[node name="TitleLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 165.0
margin_top = 768.0
margin_right = 477.0
margin_bottom = 842.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 2 )
text = "CONTEXT"
scroll_active = false

[node name="TitleLabel2" type="RichTextLabel" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 156.0
margin_top = 832.0
margin_right = 468.0
margin_bottom = 906.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 2 )
text = "CONTEXT"
scroll_active = false

[node name="TextLabel" type="RichTextLabel" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
margin_left = 498.0
margin_top = 773.0
margin_right = 2736.0
margin_bottom = 881.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 2 )
text = "Title"

[node name="ClockLabel" type="RichTextLabel" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 1728.0
margin_top = 779.0
margin_right = 1974.0
margin_bottom = 860.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 2 )
text = "0:00"
scroll_active = false

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Dialog" parent="." instance=ExtResource( 4 )]
margin_left = 101.0
margin_top = 832.0
margin_right = 101.0
margin_bottom = 832.0
timeline = "timeline-1657302017.json"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
